// Vitest Snapshot v1

exports[`accent box 1`] = `
<span
  class="hbox"
>
  <span
    class="vlist"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="box main-r"
      style="margin-bottom: -0.4306em; height: 0.6944em; line-height: 0.7579em;"
    >
      ^
    </span>
  </span>
  <span
    class="vlist"
  >
    <span
      class="box math-i"
      style="height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
    >
      f
    </span>
    <span
      style="margin-bottom: 0.1200em; margin-top: 0.0400em; height: 0.0400em; background: black; width: 100%;"
    />
  </span>
  <span
    class="vlist"
  >
    <span
      class="box math-i"
      style="height: 0.6833em; padding-right: 0.0715em; line-height: 0.8677em;"
    >
      K
    </span>
    <span
      class="box main-r"
      style="margin-bottom: -0.4310em; height: 0.6679em; line-height: 0.0047em;"
    >
      ~
    </span>
  </span>
  <span
    class="vlist"
  >
    <span
      class="box size2"
      style="height: 2.2222em; padding-right: 0.4445em; line-height: 2.2220em;"
    >
      ∫
    </span>
    <span
      class="box main-r"
      style="margin-bottom: -0.4310em; height: 0.6944em; line-height: 0.7579em;"
    >
      ^
    </span>
  </span>
</span>
`;

exports[`frac 1`] = `
<span
  class="hbox"
>
  <span
    class="vlist"
    style="height: 2.2519em; vertical-align: -0.6860em;"
  >
    <span
      class="hbox"
      style="bottom: 0.0000em;"
    >
      <span
        class="box math-i"
        style="height: 0.6833em; padding-right: 0.0715em; line-height: 0.8677em;"
      >
        K
      </span>
      <span
        class="box main-r"
        style="margin-left: 0.2222em; height: 0.6667em; line-height: 0.5357em;"
      >
        +
      </span>
      <span
        class="box math-i"
        style="margin-left: 0.2222em; height: 0.8540em; padding-right: 0.0572em; line-height: 0.8200em;"
      >
        j
      </span>
    </span>
    <span
      style="height: 0.0400em; background: black; width: 100%; bottom: 0.2327em;"
    />
    <span
      class="hbox"
      style="bottom: 0.4452em;"
    >
      <span
        class="box math-i"
        style="height: 0.4306em; line-height: 0.3621em;"
      >
        a
      </span>
      <span
        class="box main-r"
        style="margin-left: 0.2222em; height: 0.6667em; line-height: 0.5357em;"
      >
        +
      </span>
      <span
        class="box math-i"
        style="margin-left: 0.2222em; height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
      >
        f
      </span>
    </span>
  </span>
</span>
`;

exports[`hbox 1`] = `
<span
  class="hbox"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
  <span
    class="box main-r"
    style="margin-left: 0.2222em; height: 0.6667em; line-height: 0.5357em;"
  >
    +
  </span>
  <span
    class="box math-i"
    style="margin-left: 0.2222em; height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
  >
    f
  </span>
  <span
    class="box main-r"
    style="margin-left: 0.2778em; height: 0.2337em; line-height: 0.1027em;"
  >
    =
  </span>
  <span
    class="box size2"
    style="margin-left: 0.2778em; height: 2.2222em; padding-right: 0.4445em; line-height: 2.2220em;"
  >
    ∫
  </span>
</span>
`;

exports[`leftright 1`] = `
<span
  class="hbox"
>
  <span
    class="hbox"
  >
    <span
      class="box main-r"
      style="height: 1.0000em; line-height: 0.8690em;"
    >
      (
    </span>
    <span
      class="hbox"
    >
      <span
        class="box math-i"
        style="height: 0.4306em; line-height: 0.3621em;"
      >
        a
      </span>
      <span
        class="box main-r"
        style="margin-left: 0.2222em; height: 0.6667em; line-height: 0.5357em;"
      >
        +
      </span>
      <span
        class="box math-i"
        style="margin-left: 0.2222em; height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
      >
        f
      </span>
    </span>
    <span
      class="box main-r"
      style="height: 1.0000em; line-height: 0.8690em;"
    >
      )
    </span>
  </span>
  <span
    class="hbox"
    style="margin-left: 0.1667em;"
  >
    <span
      class="box size3"
      style="height: 2.4000em; line-height: 2.4000em;"
    >
      (
    </span>
    <span
      class="hbox"
    >
      <span
        class="box size2"
        style="height: 2.2222em; padding-right: 0.4445em; line-height: 2.2220em;"
      >
        ∫
      </span>
      <span
        class="box main-r"
        style="margin-left: 0.1667em; height: 0.6667em; line-height: 0.5357em;"
      >
        +
      </span>
      <span
        class="box math-i"
        style="height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
      >
        f
      </span>
    </span>
    <span
      class="box size3"
      style="height: 2.4000em; line-height: 2.4000em;"
    >
      )
    </span>
  </span>
</span>
`;

exports[`matrix 1`] = `
<span
  class="hbox"
>
  <span
    class="hbox"
  >
    <span
      class="box size3"
      style="height: 2.4000em; line-height: 2.4000em;"
    >
      (
    </span>
    <span
      class="hbox"
    >
      <span
        class="hbox"
      >
        <span
          class="vlist"
          style="margin-right: 0.5000em; height: 1.6306em; vertical-align: -0.5900em;"
        >
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em;"
          >
            a
          </span>
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em; bottom: 0.7694em;"
          >
            a
          </span>
        </span>
        <span
          class="vlist"
          style="margin-left: 0.5000em; height: 1.6306em; vertical-align: -0.5900em;"
        >
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em;"
          >
            a
          </span>
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em; bottom: 0.7694em;"
          >
            a
          </span>
        </span>
      </span>
    </span>
    <span
      class="box size3"
      style="height: 2.4000em; line-height: 2.4000em;"
    >
      )
    </span>
  </span>
  <span
    class="hbox"
    style="margin-left: 0.1667em;"
  >
    <span
      class="box size3"
      style="height: 2.4000em; line-height: 2.4000em;"
    >
      (
    </span>
    <span
      class="hbox"
    >
      <span
        class="hbox"
      >
        <span
          class="vlist"
          style="margin-right: 0.5000em; height: 1.6306em; vertical-align: -0.5900em;"
        >
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em;"
          >
            a
          </span>
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em; bottom: 0.7694em;"
          >
            a
          </span>
        </span>
        <span
          class="vlist"
          style="margin-left: 0.5000em; height: 0.4306em; vertical-align: -0.5900em;"
        >
          <span
            class="box math-i"
            style="height: 0.4306em; line-height: 0.3621em;"
          >
            a
          </span>
        </span>
      </span>
    </span>
    <span
      class="box size3"
      style="height: 2.4000em; line-height: 2.4000em;"
    >
      )
    </span>
  </span>
</span>
`;

exports[`sqrt 1`] = `
<span
  class="hbox"
>
  <span
    class="vlist"
    style="height: 1.0000em; vertical-align: -0.1908em;"
  >
    <span
      class="hbox"
      style="margin-left: 0.7770em; bottom: 0.1908em;"
    >
      <span
        class="box math-i"
        style="height: 0.4306em; line-height: 0.3621em;"
      >
        a
      </span>
    </span>
    <span
      style="min-width: 0.853em; height: 1.0000em; background: #31121355; display: inline-block; bottom: -0.4306em;"
    >
      <svg
        height="1.0000em"
        preserveAspectRatio="xMinYMin slice"
        viewBox="75 73 400000 1000"
        width="1.30559em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M95,702
  c-2.7,0,-7.17,-2.7,-13.5,-8c-5.8,-5.3,-9.5,-10,-9.5,-14
  c0,-2,0.3,-3.3,1,-4c1.3,-2.7,23.83,-20.7,67.5,-54
  c44.2,-33.3,65.8,-50.3,66.5,-51c1.3,-1.3,3,-2,5,-2c4.7,0,8.7,3.3,12,10
  s173,378,173,378c0.7,0,35.3,-71,104,-213c68.7,-142,137.5,-285,206.5,-429
  c69,-144,104.5,-217.7,106.5,-221
  l0 -0
  c5.3,-9.3,12,-14,20,-14
  H400000v40H845.2724
  s-225.272,467,-225.272,467s-235,486,-235,486c-2.7,4.7,-9,7,-19,7
  c-6,0,-10,-1,-12,-3s-194,-422,-194,-422s-65,47,-65,47z
  M834 80h400000v40h-400000z"
        />
      </svg>
    </span>
  </span>
  <span
    class="vlist"
    style="height: 1.0000em; vertical-align: -0.0228em;"
  >
    <span
      class="hbox"
      style="margin-left: 0.7770em; bottom: 0.0228em;"
    >
      <span
        class="box math-i"
        style="height: 0.6833em; padding-right: 0.0715em; line-height: 0.8677em;"
      >
        K
      </span>
      <span
        class="box main-r"
        style="margin-left: 0.2222em; height: 0.6667em; line-height: 0.5357em;"
      >
        +
      </span>
      <span
        class="box math-i"
        style="margin-left: 0.2222em; height: 0.4306em; line-height: 0.3621em;"
      >
        a
      </span>
    </span>
    <span
      style="min-width: 0.853em; height: 1.0000em; background: #31121355; display: inline-block; bottom: -0.7667em;"
    >
      <svg
        height="1.0000em"
        preserveAspectRatio="xMinYMin slice"
        viewBox="75 73 400000 1000"
        width="3.4486544444444447em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M95,702
  c-2.7,0,-7.17,-2.7,-13.5,-8c-5.8,-5.3,-9.5,-10,-9.5,-14
  c0,-2,0.3,-3.3,1,-4c1.3,-2.7,23.83,-20.7,67.5,-54
  c44.2,-33.3,65.8,-50.3,66.5,-51c1.3,-1.3,3,-2,5,-2c4.7,0,8.7,3.3,12,10
  s173,378,173,378c0.7,0,35.3,-71,104,-213c68.7,-142,137.5,-285,206.5,-429
  c69,-144,104.5,-217.7,106.5,-221
  l0 -0
  c5.3,-9.3,12,-14,20,-14
  H400000v40H845.2724
  s-225.272,467,-225.272,467s-235,486,-235,486c-2.7,4.7,-9,7,-19,7
  c-6,0,-10,-1,-12,-3s-194,-422,-194,-422s-65,47,-65,47z
  M834 80h400000v40h-400000z"
        />
      </svg>
    </span>
  </span>
  <span
    class="vlist"
    style="height: 3.0000em; vertical-align: -0.2950em;"
  >
    <span
      class="hbox"
      style="margin-left: 0.9500em; bottom: 0.2950em;"
    >
      <span
        class="box size2"
        style="height: 2.2222em; padding-right: 0.4445em; line-height: 2.2220em;"
      >
        ∫
      </span>
    </span>
    <span
      style="min-width: 1.02em; height: 3.0000em; background: #31121355; display: inline-block; bottom: -2.2222em;"
    >
      <svg
        height="3.0000em"
        preserveAspectRatio="xMinYMin slice"
        viewBox="75 73 400000 3000"
        width="1.95001em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M473,2793
c339.3,-1799.3,509.3,-2700,510,-2702 l0 -0
c3.3,-7.3,9.3,-11,18,-11 H400000v40H1017.7
s-90.5,478,-276.2,1466c-185.7,988,-279.5,1483,-281.5,1485c-2,6,-10,9,-24,9
c-8,0,-12,-0.7,-12,-2c0,-1.3,-5.3,-32,-16,-92c-50.7,-293.3,-119.7,-693.3,-207,-1200
c0,-1.3,-5.3,8.7,-16,30c-10.7,21.3,-21.3,42.7,-32,64s-16,33,-16,33s-26,-26,-26,-26
s76,-153,76,-153s77,-151,77,-151c0.7,0.7,35.7,202,105,604c67.3,400.7,102,602.7,104,
606zM1001 80h400000v40H1017.7z"
        />
      </svg>
    </span>
  </span>
</span>
`;

exports[`supsub 1`] = `
<span
  class="hbox"
>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="vlist"
      style="height: 0.5978em; vertical-align: 0.4130em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em; bottom: -0.0000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
        <span
          class="box math-i"
          style="height: 0.8540em; padding-right: 0.0572em; line-height: 0.8200em;"
        >
          j
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
    >
      f
    </span>
    <span
      class="vlist"
      style="height: 0.4783em; vertical-align: 0.4130em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.6833em; padding-right: 0.0715em; line-height: 0.8677em;"
        >
          K
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.6833em; padding-right: 0.0715em; line-height: 0.8677em;"
    >
      K
    </span>
    <span
      class="vlist"
      style="height: 0.3014em; vertical-align: -0.1500em;"
    >
      <span
        class="hbox"
        style="margin-left: -0.1022em; margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="vlist"
      style="height: 0.6222em; vertical-align: -0.1500em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
        >
          f
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.4306em; line-height: 0.3621em;"
    >
      a
    </span>
    <span
      class="vlist"
      style="height: 1.0975em; align-items: start; vertical-align: -0.2470em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em; bottom: 0.0000em;"
      >
        <span
          class="box math-i"
          style="height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
        >
          f
        </span>
      </span>
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em; bottom: 0.2484em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
  >
    <span
      class="box math-i"
      style="height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
    >
      f
    </span>
    <span
      class="vlist"
      style="height: 0.9614em; align-items: start; vertical-align: -0.2470em;"
    >
      <span
        class="hbox"
        style="margin-left: -0.1538em; margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em; bottom: 0.5123em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
</span>
`;

exports[`supsub 2`] = `
<span
  class="hbox"
>
  <span
    class="hbox"
  >
    <span
      class="hbox"
    >
      <span
        class="box main-r"
        style="height: 1.0000em; line-height: 0.8690em;"
      >
        (
      </span>
      <span
        class="hbox"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
      <span
        class="box main-r"
        style="height: 1.0000em; line-height: 0.8690em;"
      >
        )
      </span>
    </span>
    <span
      class="vlist"
      style="height: 0.3014em; vertical-align: 0.5029em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
    style="margin-left: 0.1667em;"
  >
    <span
      class="hbox"
    >
      <span
        class="box main-r"
        style="height: 1.0000em; line-height: 0.8690em;"
      >
        (
      </span>
      <span
        class="hbox"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
      <span
        class="box main-r"
        style="height: 1.0000em; line-height: 0.8690em;"
      >
        )
      </span>
    </span>
    <span
      class="vlist"
      style="height: 0.3014em; vertical-align: -0.2997em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
  <span
    class="hbox"
    style="margin-left: 0.1667em;"
  >
    <span
      class="hbox"
    >
      <span
        class="box main-r"
        style="height: 1.0000em; line-height: 0.8690em;"
      >
        (
      </span>
      <span
        class="hbox"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
      <span
        class="box main-r"
        style="height: 1.0000em; line-height: 0.8690em;"
      >
        )
      </span>
    </span>
    <span
      class="vlist"
      style="height: 1.1040em; align-items: start; vertical-align: -0.2997em;"
    >
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em; bottom: 0.7160em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
  <span
    class="vlist"
    style="margin-left: 0.1667em; vertical-align: -1.2351em;"
  >
    <span
      class="hbox"
      style="margin-bottom: 0.1429em; margin-top: 0.4266em; font-size: 0.7000em;"
    >
      <span
        class="box math-i"
        style="height: 0.4306em; line-height: 0.3621em;"
      >
        a
      </span>
    </span>
    <span
      class="box size2"
      style="height: 1.6000em; line-height: 1.6020em;"
    >
      ∑
    </span>
    <span
      class="hbox"
      style="margin-bottom: 0.2857em; margin-top: 0.1429em; font-size: 0.7000em;"
    >
      <span
        class="box math-i"
        style="height: 0.4306em; line-height: 0.3621em;"
      >
        a
      </span>
    </span>
  </span>
  <span
    class="hbox"
  >
    <span
      class="box size2"
      style="height: 2.2222em; padding-right: 0.4445em; line-height: 2.2220em;"
    >
      ∫
    </span>
    <span
      class="vlist"
      style="height: 2.3262em; align-items: start; vertical-align: -0.9119em;"
    >
      <span
        class="hbox"
        style="margin-left: -0.6349em; margin-right: 0.0714em; font-size: 0.7000em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
      <span
        class="hbox"
        style="margin-right: 0.0714em; font-size: 0.7000em; bottom: 2.4621em;"
      >
        <span
          class="box math-i"
          style="height: 0.4306em; line-height: 0.3621em;"
        >
          a
        </span>
      </span>
    </span>
  </span>
</span>
`;

exports[`symbol box 1`] = `
<span
  class="box math-i"
  style="height: 0.8540em; padding-right: 0.0572em; line-height: 0.8200em;"
>
  j
</span>
`;

exports[`symbol box 2`] = `
<span
  class="hbox"
>
  <span
    class="box math-i"
    style="height: 0.4306em; line-height: 0.3621em;"
  >
    a
  </span>
  <span
    class="box main-r"
    style="margin-left: 0.2222em; height: 0.6667em; line-height: 0.5357em;"
  >
    +
  </span>
  <span
    class="box math-i"
    style="margin-left: 0.2222em; height: 0.8889em; padding-right: 0.1076em; line-height: 0.8899em;"
  >
    f
  </span>
  <span
    class="box main-r"
    style="margin-left: 0.2778em; height: 0.2337em; line-height: 0.1027em;"
  >
    =
  </span>
  <span
    class="box size2"
    style="margin-left: 0.2778em; height: 2.2222em; padding-right: 0.4445em; line-height: 2.2220em;"
  >
    ∫
  </span>
</span>
`;
